--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
-version: 2
+version: 2.1
+
 jobs:
   build:
     docker:
@@ -6,4 +7,10 @@ jobs:
     steps:
       - checkout
       - run: gradle dependencies
-      - run: gradle test
+      - run:  gradle build sonarqube -Dsonar.projectKey="schehata_shelfy" -Dsonar.organization="schehata" -Dsonar.host.url="https://sonarcloud.io"
+
+workflows:
+  main:
+    jobs:
+      - build:
+          context: SonarCloud
